# rs-lisp

./: .editorconfig  .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
builder/: Cargo.toml
builder/src/: builder.rs  lib.rs  main.rs
examples/: atoms.lisp  fac.lisp  fac.rs  for_each.lisp  for_each.rs  hello_world.lisp  macros.lisp  macros.rs  module_a.lisp  module_b.lisp  simple.lisp  simple.rs  try_catch.lisp
examples/hello_world/: Cargo.toml
examples/hello_world/src/: lib.rs
gc/: Cargo.toml
gc/src/: gc.rs  lib.rs  trace.rs
lisp/: module_a.lisp
lpm/: package.lisp
lpm/rust/: Cargo.toml
lpm/rust/src/: lib.rs
lpm/src/: main.lisp
runtime/: Cargo.toml
runtime/src/: atom.rs  boolean.rs  bools.rs  builtins.rs  context.rs  escape.rs  eval.rs  exception.rs  function.rs  function_kind.rs  gc_allocator.rs  keyword.rs  kind.rs  lib.rs  linked_map.rs  lisp_macro.rs  lisp_map.rs  list.rs  map.rs  module.rs  number.rs  numbers.rs  object.rs  persistent_list.rs  persistent_map.rs  persistent_scope.rs  persistent_set.rs  persistent_vector.rs  read.rs  reader.rs  scope.rs  set.rs  special_form.rs  stack.rs  symbol.rs  value.rs  vec.rs  vector.rs
runtime/src/lisp/: bootstrap.lisp
spec/: expressions.md  functions.md  main.md  modules.md  structs.md  traits.md
src/: init.rs  lib.rs  lisp.rs  main.rs  module.rs  utils.rs
src/lisp/: bootstrap.lisp
src/loader/: dylib.rs  dylib_loader.rs  file_loader.rs  mod.rs
std/: package.lisp
std/core/: paclage.lisp
std/core/src/: lib.lisp  option.lisp
std/fs/rust/: Cargo.toml
std/fs/rust/src/: lib.rs
std/numbers/: package.lisp
std/numbers/rust/: Cargo.toml
std/numbers/rust/src/: lib.rs
