[package]
name = "lisp"
version = "0.1.0"
authors = ["Nathan Faucett <nathanfaucett@gmail.com>"]

keywords = ["lisp"]
categories = []

description = "an evaluable lisp"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://gitlab.com/nathanfaucett/rs-lisp.git"
homepage = "https://gitlab.com/nathanfaucett/rs-lisp"

[lib]
name = "lisp"
path = "src/lib.rs"

[dependencies]
lisp-gc = { version = "0.1", path = "./gc" }
lisp-runtime = { version = "0.1", path = "./runtime" }

[dev-dependencies]

[workspace]
members = [
  "gc",
  "runtime"
]
