[package]
name = "lisp"
version = "0.1.0"
authors = ["Nathan Faucett <nathanfaucett@gmail.com>"]

keywords = ["lisp"]
categories = []

description = "a lisp"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/nathanfaucett/rs-lisp.git"
homepage = "https://github.com/nathanfaucett/rs-lisp"

[lib]
name = "lisp"
path = "src/lib.rs"

[[bin]]
name = "lisp"
path = "src/main.rs"

[dependencies]
rustyline = "10.0"
libloading = "0.7"
clap = { version = "3.2" }
lisp-gc = { version = "0.1", path = "./gc" }
lisp-runtime = { version = "0.1", path = "./runtime" }

[dev-dependencies]

[workspace]
members = [
  "examples/hello_world",
  "builder",
  "gc",
  "runtime"
]
exclude = [
  "packages"
]