[package]
name = "lisp-builder"
version = "0.1.0"
authors = ["Nathan Faucett <nathanfaucett@gmail.com>"]

keywords = ["lisp", "builder"]
categories = []

description = "lisp builder"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/nathanfaucett/rs-lisp.git"
homepage = "https://github.com/nathanfaucett/rs-lisp"

[lib]
name = "lisp_builder"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "lisp-builder"
path = "src/main.rs"

[dependencies]
cargo = "0.54"
clap = { version = "3.0.0-beta.2" }

[dev-dependencies]
