[package]
name = "lang-gc"
version = "0.1.0"
authors = ["Nathan Faucett <nathanfaucett@gmail.com>"]

keywords = ["lang", "gc"]
categories = []

description = "lang garbage collector"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://gitlab.com/nathanfaucett/rs-lang.git"
homepage = "https://gitlab.com/nathanfaucett/rs-lang"

[lib]
name = "lang_gc"
path = "src/lib.rs"

[dependencies]
[dev-dependencies]
