[package]
name = "lisp-gc"
version = "0.1.0"
authors = ["Nathan Faucett <nathanfaucett@gmail.com>"]

keywords = ["lisp", "gc"]
categories = []

description = "lisp garbage collector"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/nathanfaucett/rs-lisp.git"
homepage = "https://github.com/nathanfaucett/rs-lisp"

[lib]
name = "lisp_gc"
path = "src/lib.rs"

[dependencies]
[dev-dependencies]
