[package]
name = "lisp-runtime"
version = "0.1.0"
authors = ["Nathan Faucett <nathanfaucett@gmail.com>"]

keywords = ["lisp", "runtime"]
categories = []

description = "lisp runtime"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/nathanfaucett/rs-lisp.git"
homepage = "https://github.com/nathanfaucett/rs-lisp"

[lib]
name = "lisp_runtime"
path = "src/lib.rs"

[dependencies]
num-traits = "0.2"
serde = "1.0"
serde_derive = "1.0"
hashbrown = "0.9"
parking_lot = "0.11"
lisp-gc = { version = "0.1", path = "../gc" }

[dev-dependencies]
