[package]
name = "lpm"
version = "0.1.0"
authors = ["Nathan Faucett <nathanfaucett@gmail.com>"]

keywords = ["lisp", "package", "manager"]
categories = []

description = "lisp package manager"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://gitlab.com/nathanfaucett/rs-lisp.git"
homepage = "https://gitlab.com/nathanfaucett/rs-lisp"

[lib]
name = "lpm"
path = "src/lib.rs"

[dependencies]
[dev-dependencies]
